// 版本号
syntax = "proto3";

// 指定包名
package proto.video;

option go_package = "pb/video";

import "proto/user.proto";
import "proto/video_list.proto";

  message rpc_publish_action_request {
   int64 user_id = 1; // 用户鉴权token
   bytes data = 2; // 视频数据
   string title = 3; // 视频标题
}

  message douyin_publish_action_response {
     int32 status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
  }

  message douyin_publish_list_request {
     int64 user_id = 1; // 用户id
     string token = 2; // 用户鉴权token
  }
  
  message douyin_publish_list_response {
     int32 status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
    repeated proto.video_list.video video_list = 3; // 用户发布的视频列表
  }

  message rpc_favorite_action_request {
   int64 user_id = 1; // 用户鉴权token
   int64 video_id = 2; // 视频id
   int32 action_type = 3; // 1-点赞，2-取消点赞
}
  
  message douyin_favorite_action_response {
     int32 status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
  }


message douyin_favorite_list_request {
     int64 user_id = 1; // 用户id
     string token = 2; // 用户鉴权token
  }

  message douyin_favorite_list_response {
     string status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
    repeated proto.video_list.video video_list = 3; // 用户点赞视频列表
  }

  message rpc_comment_action_request {
   int64 user_id = 1; // 用户鉴权token
   int64 video_id = 2; // 视频id
   int32 action_type = 3; // 1-发布评论，2-删除评论
   string comment_text = 4; // 用户填写的评论内容，在action_type=1的时候使用
   int64 comment_id = 5; // 要删除的评论id，在action_type=2的时候使用
}

  message douyin_comment_action_response {
     int32 status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
     Comment comment = 3; // 评论成功返回评论内容，不需要重新拉取整个列表
  }

  message Comment {
     int64 id = 1; // 视频评论id
     proto.user.User user =2; // 评论用户信息
     string content = 3; // 评论内容
     string create_date = 4; // 评论发布日期，格式 mm-dd
  }

  message rpc_comment_list_request {
   int64 user_id = 1; // 用户鉴权token
   int64 video_id = 2; // 视频id
  }
  
  message douyin_comment_list_response {
     int32 status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
    repeated Comment comment_list = 3; // 评论列表
  }

  service video {
    rpc douyin_publish_action(stream rpc_publish_action_request) returns (douyin_publish_action_response){

    }
    rpc douyin_publish_list(douyin_publish_list_request) returns (douyin_publish_list_response){

    }
    rpc douyin_favorite_action(rpc_favorite_action_request) returns (douyin_favorite_action_response){

    }
    rpc douyin_favorite_list(douyin_favorite_list_request) returns (douyin_favorite_list_response){

    }
    rpc douyin_comment_action(rpc_comment_action_request) returns (douyin_comment_action_response){

    }
    rpc douyin_comment_list(rpc_comment_list_request) returns (douyin_comment_list_response){

    }
}
